update lecturer rv appointment